syntax = "proto3";

package test.data.servicesamples;

enum SimpleEnum {
	VALUE1 = 0;
	VALUE44 = 44;
	VALUE323 = 323;
}

message SimpleRequest {
	string username = 1;
	uint32 someNumber = 2;
	int32 signedNumber = 3;
	string anotherString = 4;
	SimpleEnum someEnum = 5;
}

message SimpleResponse {
	string username = 1;
	uint32 someNumber = 2;
	int64 signedNumber = 3;
	string anotherString = 4;
}

message NestedMessage {
	string hello = 1;
}

message DifferentRequest {
	oneof oneofField {
		string name = 1;
		int32 num = 2;
		SimpleRequest simpleRequest = 3;
	}
	NestedMessage nestedMessage = 4;
	optional string optionalField = 5;
}

message DifferentResponse {
	oneof oneofField {
		string bob = 1;
		int32 bobother = 2;
		SimpleResponse simpleResponse = 3;
	}
	optional string optionalField = 5;
}


message OptionalContainer {
	optional string hello = 1;
	string bob = 2;
}


service SimpleService {
	rpc method1(SimpleRequest) returns (SimpleResponse);
	rpc method2(DifferentRequest) returns (DifferentResponse);
	rpc method3(OptionalContainer) returns (OptionalContainer);
}
